View Issue Details

IDProjectCategoryView StatusLast Update
0023586Open CASCADEOCCT:Testspublic2013-04-29 15:21
ReporteribsAssigned Toabv 
PrioritynormalSeverityfeature 
Status closedResolutionfixed 
Product Version6.5.4 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023586: The test execution process should correctly stop on user demand
DescriptionIn the cmd or bash, by pressing Control-C the current test run to completion and next test in queue will not execute.

Thereafter, a log file will create correctly.
TagsNo tags attached.
Test case numberNot needed

Activities

abv

2012-11-29 15:13

manager   ~0022444

The fix allowing to break DRAW scripts and execution of tests by Control-Break is pushed to branch CR23586. Tested on Windows; need testing on Linux.

bugmaster

2012-11-30 16:00

administrator   ~0022488

Reviewed without remarks

bugmaster

2012-11-30 17:53

administrator   ~0022493

Dear MKV,

Please test compilation on Linux

mkv

2012-12-03 17:47

tester   ~0022527

Dear BugMaster,
Branch CR23586 (and products from GIT master) was compiled on Linux and Windows platforms.
There are compilation errors on Linux:

../../../src/OSD/OSD_signal.cxx:596: error: 'OSD_Exception_CTRL_BREAK' has not been declared
../../../src/OSD/OSD_signal.cxx:596: error: 'TEXT' was not declared in this scope

abv

2012-12-03 19:01

manager   ~0022529

Correction pushed to CR23586, please test

mkv

2012-12-07 15:33

tester   ~0022625

Dear BugMaster,
Branch CR23586 (and products from GIT master) was compiled on Linux and
Windows platforms and tested.

Regressions:
Not detected

Improvements:
Not detected

Testing cases:
Not needed

Related Changesets

occt: master 8a262fa1

2012-12-07 12:12:01

abv


Committer: abv Details Diff
0023586: The test execution process should correctly stop on user demand

Possibility to break DRAW commands by user break (Control-C) is implemented as follows:

- Treatment of Control-C (SIGINT signal) on UNIX in OSD::SetSignal() is made coherent with Windows implementation: instead of attempt to raise exception (simulated by longjump, does not work anyway), signal handler just sets a flag which can be later checked by OSD::ControlBreak()

- Call to OSD::ControlBreak() is added to common entry point for OCCT DRAW commands; this causes command interruption if Control-C has been pressed before its start.

- Command "dbreak" added allowing to check Control-Break status from Tcl script (raises Tcl exception if break was signaled)

- Command "dversion" added printing information on OCCT version, used build options, compiler, etc.

- Test system modified to properly handle and report user breaks and add version info in the summary log

Fix compiler error on Linux
Affected Issues
0023586
mod - src/Draw/Draw_BasicCommands.cxx Diff File
mod - src/Draw/Draw_Interpretor.cxx Diff File
mod - src/DrawResources/TestCommands.tcl Diff File
mod - src/OSD/OSD_signal.cxx Diff File

Issue History

Date Modified Username Field Change
2012-11-26 16:36 ibs New Issue
2012-11-26 16:36 ibs Assigned To => ibs
2012-11-28 17:10 abv Assigned To ibs => abv
2012-11-28 17:10 abv Status new => assigned
2012-11-29 15:13 abv Note Added: 0022444
2012-11-29 15:13 abv Assigned To abv => bugmaster
2012-11-29 15:13 abv Status assigned => resolved
2012-11-29 15:13 abv Target Version => 6.6.0
2012-11-30 16:00 bugmaster Note Added: 0022488
2012-11-30 16:00 bugmaster Status resolved => reviewed
2012-11-30 16:00 bugmaster Status reviewed => tested
2012-11-30 17:52 bugmaster Assigned To bugmaster => mkv
2012-11-30 17:52 bugmaster Status tested => assigned
2012-11-30 17:53 bugmaster Note Added: 0022493
2012-11-30 18:02 mkv Status assigned => resolved
2012-11-30 18:02 mkv Status resolved => reviewed
2012-12-03 17:47 mkv Note Added: 0022527
2012-12-03 17:48 mkv Test case number => Not needed
2012-12-03 17:48 mkv Assigned To mkv => abv
2012-12-03 17:48 mkv Status reviewed => assigned
2012-12-03 19:01 abv Note Added: 0022529
2012-12-03 19:01 abv Status assigned => resolved
2012-12-03 19:02 abv Assigned To abv => mkv
2012-12-03 19:02 abv Status resolved => reviewed
2012-12-07 15:33 mkv Note Added: 0022625
2012-12-07 15:33 mkv Assigned To mkv => bugmaster
2012-12-07 15:33 mkv Status reviewed => tested
2012-12-10 17:16 abv Changeset attached => occt master 8a262fa1
2012-12-10 17:16 abv Assigned To bugmaster => abv
2012-12-10 17:16 abv Status tested => verified
2012-12-10 17:16 abv Resolution open => fixed
2013-04-23 13:37 aiv Status verified => closed
2013-04-29 15:21 aiv Fixed in Version => 6.6.0